# MCNF E12 "Construct" — `mde-files-egui`: the egui file-manager surface (E12-11).
#
# An `eframe` app on the shared `mde-egui` harness that REUSES `mde-files`'
# render-agnostic core — the `Backend` trait (`RealBackend`/`DemoBackend`/
# `LocalFsBackend`), the `FileRow`/`Peer` model, and the `SendToRequest` transfer
# shape — over the mesh Bus. The first slice browses a local directory and a
# mesh-peer folder and initiates a Send-To.
#
# Tier (§6): desktop-shell. The edges point inward — `mde-egui` (shared harness)
# and `mde-files` (services, consumed WITHOUT its Cosmic-era GUI). E12 is
# egui-native, so the retired file-manager GUI is never pulled.
[package]
name        = "mde-files-egui"
description = "MCNF E12 Construct — an egui file-manager surface on the mde-egui harness that reuses mde-files' render-agnostic backend/model/send_to (file listing + transfer model) over the mesh Bus: browse a local directory and a mesh-peer folder, then initiate a Send-To. Renders through the shared Style; the retired Cosmic-era GUI is not pulled (mde-files is consumed with default-features off)."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[lib]
name = "mde_files_egui"
path = "src/lib.rs"

[[bin]]
name = "mde-files-egui"
path = "src/main.rs"

[dependencies]
# The §4/§5 egui harness — `run_client` + the shared `Style`/`Motion` + the
# re-exported `egui`/`eframe` (one toolkit resolution for every surface).
mde-egui = { path = "../../shared/mde-egui" }
# Shared Construct/YAMIS icon catalog for the Files toolbar and future file-type
# glyphs. This is a desktop surface edge to shared brand assets, matching the
# shell's dock/start/status icon path.
mde-theme = { path = "../../shared/mde-theme" }
# REUSE: mde-files' render-agnostic core. `default-features = false` drops the
# Cosmic-era GUI (E12 is egui-native); `dbus` keeps the Bus transport so Send-To
# routes over `action/file-ops/send-to` and peer folders list over
# `action/fleet-files/list-peer`.
mde-files = { path = "../../services/mde-files", default-features = false, features = ["dbus"] }
# FILEMGR-9 — the Mesh sidebar tree reads `state/mesh-mount/<host>` + writes
# `action/mesh-mount/<host>` directly on the Bus, the same persist-first path the
# other desktop planes take (`mde-shell-egui::storage` → `state/storage/*`). A
# local `Persist` read/write only (no tokio, no rpc round-trip), so an offline
# peer can never hang the UI.
mde-bus = { path = "../../platform/mde-bus" }
mackes-mesh-types = { path = "../../mesh/mackes-mesh-types" }
# FILEMGR-9 — the `state/mesh-mount/*` record + the `action/mesh-mount/<host>`
# verb are a JSON boundary; the surface owns local serde mirrors of the FILEMGR-5
# worker's wire shapes (never a dep on `mackesd`), exactly as `mde-shell-egui`
# mirrors the storage worker's payloads.
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
# FILEMGR-12 — "Send in Chat" hands a file to a NOTIFY-CHAT conversation as the
# REUSED `mde-chat` file message-kind (`MessageKind::File`), published on the
# existing `action/chat/send` verb the mackesd `chat` worker drains — the same
# wire `mde-shell-egui::chat::send_file` uses. A pure model type (services tier,
# an inward edge under §6); no new message shape is invented.
mde-chat = { path = "../../services/mde-chat" }
# FILEMGR-10 — thumbnail + preview decode on the worker thread (never the paint
# path). `image` 0.25 is already in the workspace lock (mde-files' freedesktop
# thumbnails pull the same decoders), so this add is fetch-free on the airgapped
# farm; the feature set mirrors what the lock already resolves (png/jpeg/gif/
# bmp/webp/tiff). Formats with no locked decoder (heic/avif/svg) are honestly
# labeled "no built-in decoder" instead of pulling a new crate.
image      = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "webp", "tiff"] }
# FILEMGR-10 — the preview pane's media metadata (duration/codec/rate/channels)
# is a *container-header probe* via Symphonia, the exact crate+features the
# mde-musicd playback engine already locks — fetch-free, and never an audio or
# video decode. The lock ships no video *codec* (no ffmpeg/h264/vp9), so video
# rows get an honest metadata-only preview, never a fake frame.
symphonia  = { version = "0.5", default-features = false, features = ["flac", "mp3", "vorbis", "aac", "isomp4", "ogg", "pcm", "wav"] }
# FILEMGR-11 — the Properties dialog offers `chown` only when the process may
# (root / CAP_CHOWN). `geteuid` is that honest euid probe: rustix's is a *safe*
# wrapper (this crate keeps `unsafe_code = forbid`), and it's the exact running-
# uid seam mackesd's seal path already uses. rustix is in the workspace lock
# (winit/eframe pull it), so enabling its `process` feature is fetch-free on the
# airgapped farm — no new crate, no `libc`.
rustix     = { version = "1", features = ["process"] }
rand       = "0.8"

[dev-dependencies]
# TRANSFERS-8 — the transfers file-store round-trip test writes an inbox verb +
# reads a ledger under a throwaway store root. `tempfile` is already in the
# workspace lock (mde-shell-egui + the services tier use it), so this is
# fetch-free on the airgapped farm.
tempfile = "3"

[lints]
workspace = true
