# MCNF E12 "Construct" - `mde-maps-location-egui`: native Maps & Location workspace.
#
# First vertical slice for a vehicle-native map/routing/location/MG90 management
# surface. The production hardware/protocol crates called out by the product
# directive are represented here as internal seams first so the shell gets a
# reachable, simulator-backed workspace before those seams are split into
# standalone crates.
[package]
name        = "mde-maps-location-egui"
description = "MCNF E12 Construct - native egui Maps & Location workspace with simulator-backed MG90, offline maps, routing, location sources, vehicle telemetry, GPIO, firmware, vault, backups, and recovery seams."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[lib]
name = "mde_maps_location_egui"
path = "src/lib.rs"

[[bin]]
name = "mde-maps-location-egui"
path = "src/main.rs"

[dependencies]
mde-egui = { path = "../../shared/mde-egui" }

# Rolling Node Phase 2 — the live `state/vehicle/<node>` mirror this cockpit
# folds onto its simulator-seeded models. mde-bus is the platform-services
# tier; mackes-mesh-types is the mesh-tier wire-type registry. Both are pure
# data/read seams (no daemon dependency), matching the dependency edge
# mde-shell-egui already draws on the same two crates (§6).
mde-bus       = { path = "../../platform/mde-bus" }
mackes-mesh-types = { path = "../../mesh/mackes-mesh-types" }
serde_json.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
