# MCNF E12 "Construct" - `mde-maps-location-egui`: native Maps & Location workspace.
#
# First vertical slice for a vehicle-native map/routing/location/MG90 management
# surface. The production hardware/protocol crates called out by the product
# directive are represented here as internal seams first so the shell gets a
# reachable, simulator-backed workspace before those seams are split into
# standalone crates.
[package]
name        = "mde-maps-location-egui"
description = "MCNF E12 Construct - native egui Maps & Location workspace with simulator-backed MG90, offline maps, routing, location sources, vehicle telemetry, GPIO, firmware, vault, backups, and recovery seams."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[features]
# Test-only simulator fixture: `MapsLocationSurface::simulated()` + the
# `simulate_*` scenario methods. NEVER enabled by a production build —
# mde-shell-egui enables it from [dev-dependencies] only, and the workspace's
# resolver = "2" keeps dev-dep features out of `cargo build` (WL-UX-007/S1,
# operator directive 2026-07-22: production shows MG90-mirror data only).
sim-fixture = []

[lib]
name = "mde_maps_location_egui"
path = "src/lib.rs"

[[bin]]
name = "mde-maps-location-egui"
path = "src/main.rs"

[dependencies]
mde-egui = { path = "../../shared/mde-egui" }

# Rolling Node — the live `state/vehicle/<node>` mirror this cockpit folds onto
# its simulator-seeded models so the Drive HUD reads the real MG90 when the
# gateway is on the Bus. mde-bus is the platform-services read seam;
# mackes-mesh-types is the mesh-tier wire-type registry. Both are pure data/read
# seams (no daemon dependency), matching the edge mde-shell-egui already draws.
mde-bus           = { path = "../../platform/mde-bus" }
mackes-mesh-types = { path = "../../mesh/mackes-mesh-types" }
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true

# Offline basemap + gazetteer readers (WL-FUNC-013 P1/P2). Both read the bundled
# `<client_data_dir>/maps/<region>/{*.mbtiles, gazetteer.sqlite}` files:
#   - rusqlite pinned to the mesh's 0.32 + bundled build (matches mde-bus /
#     mde-bookmarks), so the whole workspace still links ONE libsqlite3-sys. The
#     bundled amalgamation compiles SQLITE_ENABLE_FTS5, which the gazetteer needs.
#   - image (png only) decodes the MBTiles PNG raster tiles for the egui texture
#     cache; same 0.25 pin mde-files/mde-files-egui already resolve.
rusqlite = { version = "0.32", features = ["bundled"] }
image    = { version = "0.25", default-features = false, features = ["png"] }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
