[package]
name        = "mde-media-core"
description = "MEDIA-1 (mesh-media-player, docs/design/mesh-media-player.md) — the libmpv-backed engine + player core. A mature engine (mpv) wrapped behind an injectable `MediaEngine` seam so the `Player` state machine (Idle→Loading→Playing⇄Paused→Stopped/Ended; position/duration/state events; track enumeration) is unit-tested against `FakeMpv` WITHOUT a real mpv. The real libmpv2 engine is feature-gated (`mpv`) so the default build stays airgap-safe (no system libmpv needed); a real-clip smoke runs only where system libmpv is present. §6 glue — wraps mpv, never reimplements decode."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[lib]
name = "mde_media_core"
path = "src/lib.rs"

[dependencies]
# The player-state record + track model serialize (MEDIA-16 session roaming
# consumes them), and mpv's `track-list` property + the OpenSubtitles REST
# response are parsed from JSON.
serde      = { workspace = true }
serde_json = { workspace = true }
# Error enum, matching the mackes-xcp convention.
thiserror  = "1"

# MEDIA-16 session roaming: the canonical Syncthing-replicated workgroup root
# (`default_workgroup_root` — resolves `$MDE_WORKGROUP_ROOT`, never a hardcoded
# `/mnt/mesh-storage`, so it can't reintroduce the peers/CLI split-brain). This is
# the lightweight shared-types crate (serde/serde_json/toml/dirs — no substrate),
# hosted specifically so UI/desktop consumers can reuse the mesh record idiom
# without depending on the heavy `mackesd` crate; already in the workspace lock via
# `mde-term-egui`, so it adds no lock entry and stays airgap-safe.
mackes-mesh-types = { path = "../../mesh/mackes-mesh-types" }

# MEDIA-5 OpenSubtitles online fetch (egress) — the real HTTPS client is OPTIONAL
# and OFF by default. reqwest (0.12, already in the workspace via mde-bus/mde-musicd)
# with `rustls-tls` gives airgap-friendly HTTPS (no system OpenSSL). It is gated
# behind the `opensubtitles` feature, so the default build/test/clippy compile only
# the pure, fixture-tested hash + request-builder + response-parser (no network, no
# reqwest). The live fetch is honest-gated to a host with egress + an API key,
# exactly like the `mpv` real-clip smoke.
[dependencies.reqwest]
version          = "0.12"
default-features = false
features         = ["blocking", "rustls-tls"]
optional         = true

# The real engine — libmpv2 (mpv 2.x client API) — is OPTIONAL and OFF by
# default. It (via libmpv2-sys/bindgen) links the system `libmpv` + its C
# headers, which are not present on the airgapped farm, so the default
# build/test/clippy compile only the seam + FakeMpv (no C dependency). Adding it
# to Cargo.lock only requires REGISTRY resolution (metadata + checksum), not
# compilation — so the binding is verified-fetchable + pinned in the lock even
# where it cannot be built. Building `--features mpv` (the real-clip smoke) is
# honest-gated on a host with `mpv-libs-devel`. Its default `render` feature
# (OpenGL FBO rendering) stays enabled but unused here — MEDIA-2 phase 1
# (`docs/gpu_encoder.md`) captures frames through the `screenshot-to-file`
# command instead (no EGL/GL context, so it works with no display and needs no
# `unsafe` — this crate is `unsafe_code = "forbid"`); the render API is the
# phase-2 DRM-overlay optimization, not built here.
[dependencies.libmpv2]
version  = "6"
optional = true

# MEDIA-2 phase 1's frame sink decodes the PNG `screenshot-to-file` writes back
# to raw RGBA8 (`mpv::latest_frame`) — the exact `png`-crate path
# `mde-shell-egui`'s `chooser::decode_png_rgba` already uses at this same 0.18
# pin, so it adds no new lock entry. Optional + tied to `mpv`: the default
# airgap-safe build never decodes a PNG it never produced.
[dependencies.png]
version  = "0.18"
optional = true

[features]
default = []
# The real libmpv2 engine (`src/mpv.rs`) + the real-clip path of the smoke bin.
mpv = ["dep:libmpv2", "dep:png"]
# The live OpenSubtitles HTTPS client (`opensubtitles::OpenSubtitlesClient`). OFF
# by default; the hash + request-builder + response-parser stay in the default
# build. Enabling it is honest-gated on a host with egress + an API key.
opensubtitles = ["dep:reqwest"]

[dev-dependencies]
# MEDIA-16 session-roaming tests write per-seat records into a scratch workgroup
# root; tempfile is already in the workspace lock (mde-jellyfin / mde-media-egui
# dev-deps), so this adds no new lock entry and stays airgap-safe.
tempfile = "3"

[lints]
workspace = true
