# MCNF — `mde-media-egui`: the media app surface (MEDIA-8,
# `docs/design/mesh-media-player.md`).
#
# The full media application UI — Sources, Library browse, a Player view (transport
# + the MEDIA-6 advanced controls), a Queue, and a PiP mini-player — on the shared
# `mde-egui` harness. It is glue over `mde-media-core` (§6): the surface RENDERS +
# drives the crate's `Player` / `Library` / `Playlist` / `PlaybackControls` /
# `ResumeState`; no playback, indexing, or queue logic is reimplemented here. State
# lives in `mde-media-core`; this crate calls its methods and displays its data,
# entirely through the shared `Style` Carbon tokens (§4 — no raw hex).
#
# Tier (§6): desktop-shell. The dependency edges point strictly INWARD — desktop →
# harness (`mde-egui`) and desktop → the media core (`mde-media-core`); it pulls in
# no mesh-substrate crate, so the substrate stays headless-capable.
[package]
name        = "mde-media-egui"
description = "MCNF MEDIA-8 — the egui-native media app surface. Renders + drives mde-media-core (Player / Library / Playlist / PlaybackControls / ResumeState) as a full app: Sources, Library browse, a Player view with the MEDIA-6 transport + advanced controls, a Queue, and a PiP mini-player, all through the shared mde-egui Carbon Style (§4). The render-agnostic controller + view-model folds are unit-tested without a GPU; live decode on a seat rides the honest-gated mpv feature."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[lib]
name = "mde_media_egui"
path = "src/lib.rs"

[[bin]]
name = "mde-media-egui"
path = "src/main.rs"

[dependencies]
# §4/§5 harness — the one inward desktop dependency: run_client (the eframe runner),
# the shared Carbon Style + widgets, and the re-exported egui/eframe so the surface
# shares one toolkit resolution with every sibling -egui surface.
mde-egui       = { path = "../../shared/mde-egui" }
# §6 reuse — the media engine + models. We drive its Player (transport + the MEDIA-6
# controls), browse its Library (MEDIA-7), render its Playlist / Queue (MEDIA-6), and
# read its ResumeState (MEDIA-7). All already tested there against FakeMpv.
mde-media-core = { path = "../mde-media-core" }

[features]
default = []
# The real libmpv engine, forwarded to mde-media-core's `mpv` feature. OFF by default
# so the surface builds airgap-safe over FakeMpv (the same honest-gated split as the
# core's `media-smoke`); enabling it needs a host with system libmpv, exactly like the
# core's real-clip smoke.
mpv = ["mde-media-core/mpv"]

[lints]
workspace = true
