[package]
name        = "mde-seat"
description = "E12-15 (Quasar host controls) — the seat hardware-access library. The compositor-less shell owns the DRM seat, so every 'system control' a desktop OS takes for granted (audio, Bluetooth, displays, backlight, power) needs one owner: this crate. Typed clients behind injectable seams (the mde-kvm ChTransport pattern) for BlueZ / UPower / logind over the system D-Bus, a read-only DRM connector prober, and sysfs backlight read/write — plus the PipeWire and DDC/CI client TRAITS whose real bindings land in E12-16/E12-18 (until then they answer with a typed Unavailable, never a stub that lies). A SeatSnapshot aggregates every probe for the shell's System surface + chrome icons."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[lib]
path = "src/lib.rs"

[dependencies]
# BlueZ / UPower / logind are D-Bus system services — the §2 FDO-interop
# exception covers all three (standard FDO services, no MDE-private bus names).
# Same zbus 5 + tokio build as the rest of the workspace (mackesd, mde-musicd);
# `blocking-api` because the seat clients are synchronous probes called from the
# shell's pump thread — zbus runs its own internal runtime for block_on.
zbus = { version = "5", default-features = false, features = ["tokio", "blocking-api"] }

# The read-only DRM connector prober (connectors / modes / EDID sizes). Pure-Rust
# ioctl bindings — the same crate + version the mde-egui DRM runner pins; probing
# needs none of the heavy GBM/EGL/libinput stack, so it is a normal (non-optional)
# dependency and stays headless-buildable.
drm = "0.14"

# Typed error enum, matching the mde-kvm / mackes-xcp convention.
thiserror = "1"

# Serde derives for the Bus-mirrored snapshot types (state/inventory-class
# payloads serialized to the mde-bus); matches the workspace serde 1 + derive pin.
serde = { version = "1", features = ["derive"] }

[lints]
workspace = true
